--- a/client/src/containers/main/main.scss
+++ b/client/src/containers/main/main.scss
@@ -1,5 +1,16 @@
 @import "../../styles/colors-vars";
 
+.main {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .result__content {
+        flex: 1;
+        overflow-y: auto;
+    }
+}
+
 .result {
     background-color: $black;
 
